Animate using CSS where available, even on IE10 (i.e. Avoids jQuery)

--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -56,6 +56,13 @@
 		width: 100%;
 		height: 100%;
 	}
+	
+	#slideshow .strip,
+	#slideshow button
+	{
+		-webkit-perspective: 1000;
+		-webkit-backface-visibility: hidden;
+	}
 
 	#slideshow .slides
 	{
